--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="container">
         <h1 id="word"></h1>
         <p id="meaning"></p>
-        <button id="nextButton" class="btn"onclick="fetchWordMeaning()">Next</button>
+        <button id="nextButton" class="btn"onclick="fetchWordMeaning">Next</button>
         <audio id="tingSound">
         <source src="tingSound.mp3" type="audio/mpeg">
         </audio>
