--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="word"></h1>
+       <h1 id="word" class="flex items-center justify-center semibold uppercase">Random Word Meaning</h1>
         <p id="meaning"></p>
         <button id="nextButton" class="btn"onclick="fetchWordMeaning">Next</button>
         <audio id="tingSound">
