--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <div class="container">
-       <h1 id="word" class="flex items-center justify-center semibold uppercase">Random Word Meaning</h1>
+        <h1>Random Word Meaning</h1>
+        <h2 id="word" class="flex items-center justify-center semibold uppercase"></h2>
         <p id="meaning"></p>
         <button id="nextButton" class="btn"onclick="fetchWordMeaning">Next</button>
         <audio id="tingSound">
