--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Random Word Meaning</h1>
         <h2 id="word" class="flex items-center justify-center semibold uppercase"></h2>
         <p id="meaning"></p>
-        <button id="nextButton" class="btn"onclick="fetchWordMeaning">Next</button>
+        <button id="nextButton" class="btn"onclick="fetchWordMeaning">Start</button>
         <audio id="tingSound">
         <source src="tingSound.mp3" type="audio/mpeg">
         </audio>
