--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="made-by">
+        <h3>Made by Prabhavati Reddy</h3>
+    </div>
+    <div class="container">
+        <h1>Random Word Meaning</h1>
+        <h2 id="word" class="flex items-center justify-center semibold uppercase"></h2>
+        <p id="meaning"></p>
+        <button id="nextButton" class="btn" onclick="fetchWordMeaning">Start</button>
+        <audio id="tingSound">
+            <source src="tingSound.mp3" type="audio/mpeg">
+        </audio>
+    </div>   
+    <script src="script.js"></script>
+</body>
+</html>
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
+    <title>Random Word Meaning</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
     <div class="container">
         <h1>Random Word Meaning</h1>
         <h2 id="word" class="flex items-center justify-center semibold uppercase"></h2>
@@ -20,3 +49,4 @@
     </div>
 </body>
 </html>
+ -->
